--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 
 jobs:
-    build_and_push_docker_image:
+    build_and_push:
         docker:
             - image: docker:latest
         steps:
@@ -29,5 +29,5 @@ workflows:
                 filters:
                     branches:
                         only: master
-    jobs:
-        - build_and_push:
+        jobs:
+            - build_and_push:
