--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 
 jobs:
-    build_and_push:
+    build_and_push_image:
         docker:
             - image: docker:latest
         steps:
@@ -30,4 +30,4 @@ workflows:
                     branches:
                         only: master
         jobs:
-            - build_and_push
+            - build_and_push_image
