--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,5 +26,9 @@ workflows:
         triggers:
             - schedule:
                 cron: "0 3 * * *"
+                filters:
+                    branches:
+                        only:
+                            - master
         jobs:
             - build_and_push_image
