--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,10 +12,7 @@ jobs:
                 command: docker login -u ${DOCKER_USER} -p ${DOCKER_PASS}
             - run:
                 name: Build Docker image
-                command: docker build -t ${DOCKER_USER}/${CIRCLE_PROJECT_REPONAME}:${CIRCLE_BRANCH} .
-            - run:
-                name: Set tag name
-                command: docker tag ${DOCKER_USER}/${CIRCLE_PROJECT_REPONAME}:${CIRCLE_BRANCH} ${DOCKER_USER}/${CIRCLE_PROJECT_REPONAME}:latest
+                command: docker build -t ${DOCKER_USER}/${CIRCLE_PROJECT_REPONAME}:latest .
             - run:
                 name: Push Docker image
                 command: docker push ${DOCKER_USER}/${CIRCLE_PROJECT_REPONAME}:latest
