--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,5 +20,12 @@ jobs:
 workflows:
   version: 2
   build_and_push_docker_image:
+    triggers:
+      - schedule:
+          cron: "0 18 * * *"
+          filters:
+            branches:
+              only:
+                - master
     jobs:
       - build_and_push_image
