--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,10 +3,11 @@ version: 2
 jobs:
   build_and_push_image:
     docker:
-      - image: docker:latest
+      - image: docker:20.10.16
     steps:
       - checkout
-      - setup_remote_docker
+      - setup_remote_docker:
+          version: 20.10.16
       - run:
           name: Login to Docker Hub
           command: docker login -u ${DOCKER_USER} -p ${DOCKER_PASS}
